Fix footer social links; add flex-wrap

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,6 +54,7 @@ body {
 
 .navigation {
   display: flex;
+  flex-wrap: wrap;
   width: 1060px;
   margin: 0 auto;
 }
@@ -66,6 +67,7 @@ body {
 
 .navigation-list {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   width: 339px;
@@ -272,6 +274,7 @@ body {
 
 .services-list-item {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   width: 400px;
   align-items: center;
@@ -362,7 +365,6 @@ body {
   background-color: #82B3D3;
   padding-top: 96px;
   padding-bottom: 104px;
-  margin-bottom: 40px;
 }
 
 .newsletter-header {
@@ -469,10 +471,12 @@ body {
 .page-footer {
   display: flex;
   justify-content: space-between;
+  margin-top: 40px;
 }
 
 .footer-social-list {
   display: flex;
+  flex-wrap: wrap;
   list-style-type: none;
   padding: 0;
 }
@@ -502,6 +506,7 @@ body {
 
 .inner-container {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   align-items: flex-start;
   background-color: #82B3D3;
